static/tailwind.css
/* ... */
.from-plex\/5 {
  --tw-gradient-from: rgb(var(--color-plex) / 0.05) var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(var(--color-plex) / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-plex\/80 {
  --tw-gradient-from: rgb(var(--color-plex) / 0.8) var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(var(--color-plex) / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-plex\/\[0\.08\] {
  --tw-gradient-from: rgb(var(--color-plex) / 0.08) var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(var(--color-plex) / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-purple-600 {
  --tw-gradient-from: #9333ea var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(147 51 234 / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-transparent {
  --tw-gradient-from: transparent var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-white {
  --tw-gradient-from: #fff var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-white\/10 {
  --tw-gradient-from: rgb(255 255 255 / 0.1) var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-white\/\[0\.05\] {
  --tw-gradient-from: rgb(255 255 255 / 0.05) var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.via-amber-300 {
  --tw-gradient-to: rgb(252 211 77 / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), #fcd34d var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-amber-400 {
  --tw-gradient-to: rgb(251 191 36 / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), #fbbf24 var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-black\/20 {
  --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(0 0 0 / 0.2) var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-card\/40 {
  --tw-gradient-to: rgb(var(--color-card) / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-card) / 0.4) var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-card\/80 {
  --tw-gradient-to: rgb(var(--color-card) / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-card) / 0.8) var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-gray-100 {
  --tw-gradient-to: rgb(243 244 246 / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), #f3f4f6 var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-plex {
  --tw-gradient-to: rgb(var(--color-plex) / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-plex) / 1) var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-plex-hover {
  --tw-gradient-to: rgb(var(--color-plex-hover) / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-plex-hover) / 1) var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-plex\/10 {
  --tw-gradient-to: rgb(var(--color-plex) / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-plex) / 0.1) var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-plex\/\[0\.03\] {
  --tw-gradient-to: rgb(var(--color-plex) / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-plex) / 0.03) var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.via-transparent {
  --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
}

.to-\[\#e5a00d\] {
  --tw-gradient-to: #e5a00d var(--tw-gradient-to-position);
}

.to-amber-400 {
  --tw-gradient-to: #fbbf24 var(--tw-gradient-to-position);
}

.to-background {
  --tw-gradient-to: rgb(var(--color-bg) / 1) var(--tw-gradient-to-position);
}

.to-blue-400 {
  --tw-gradient-to: #60a5fa var(--tw-gradient-to-position);
}

.to-gray-400 {
  --tw-gradient-to: #9ca3af var(--tw-gradient-to-position);
}

.to-green-400 {
  --tw-gradient-to: #4ade80 var(--tw-gradient-to-position);
}

.to-orange-400 {
  --tw-gradient-to: #fb923c var(--tw-gradient-to-position);
}

.to-orange-500 {
  --tw-gradient-to: #f97316 var(--tw-gradient-to-position);
}

.to-orange-600 {
  --tw-gradient-to: #ea580c var(--tw-gradient-to-position);
}

.to-plex {
  --tw-gradient-to: rgb(var(--color-plex) / 1) var(--tw-gradient-to-position);
}

.to-plex-hover {
  --tw-gradient-to: rgb(var(--color-plex-hover) / 1) var(--tw-gradient-to-position);
}

.to-plex\/0 {
  --tw-gradient-to: rgb(var(--color-plex) / 0) var(--tw-gradient-to-position);
}

.to-plex\/10 {
  --tw-gradient-to: rgb(var(--color-plex) / 0.1) var(--tw-gradient-to-position);
}

.to-plex\/5 {
  --tw-gradient-to: rgb(var(--color-plex) / 0.05) var(--tw-gradient-to-position);
}

.to-plex\/50 {
  --tw-gradient-to: rgb(var(--color-plex) / 0.5) var(--tw-gradient-to-position);
}

.to-purple-400 {
  --tw-gradient-to: #c084fc var(--tw-gradient-to-position);
}

.to-transparent {
  --tw-gradient-to: transparent var(--tw-gradient-to-position);
}

.to-white\/20 {
  --tw-gradient-to: rgb(255 255 255 / 0.2) var(--tw-gradient-to-position);
}
/* ... */

